package istic.aoc.m3.observer;

/**
 * @author VinYarD
 * created : 22/01/2019, 14:24
 */


public interface Observer<T> {
	
	void update(T t);
}
